k8s/base/network-policy/allow-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dashboard
  namespace: apm
spec:
  podSelector:
    matchLabels:
      app: javi-dashboard
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8080
          protocol: TCP
  policyTypes:
    - Ingress
