k8s/base/network-policy/allow-forecast.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-forecast
  namespace: apm
spec:
  podSelector:
    matchLabels:
      app: javi-forecast
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: javi-dashboard
      ports:
        - port: 8080
          protocol: TCP
  policyTypes:
    - Ingress
