k8s/base/network-policy/allow-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis
  namespace: apm
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: javi-forecast
      ports:
        - port: 6379
          protocol: TCP
  policyTypes:
    - Ingress
