k8s/base/network-policy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: apm
spec:
  podSelector: {}
  policyTypes:
    - Ingress
